Fixed message overflow using overflow y scroll and overflow wrap break-word so lines that are to long do a return. also removed ugly scroll bar

--- a/love-letter-app/src/app/globals.css
+++ b/love-letter-app/src/app/globals.css
@@ -115,6 +115,12 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   white-space: pre-wrap;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-wrap: break-word;
+  padding: 10px;
+  scrollbar-width: none;
 }
 
 .creation-component {
